# zyrthi-hal-adapter-esp32

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  package.yaml
include/zyrthi/adapter/esp32/: adc_map.h  chip_config.h  config.h
src/: adc.c  gpio.c  i2c.c  pwm.c  system.c  time.c  uart.c
test/button_led/: CMakeLists.txt  sdkconfig.defaults
test/button_led/main/: main.c
test/hal_test/: CMakeLists.txt  sdkconfig.defaults
test/hal_test/main/: CMakeLists.txt  main.c
